# NDKDemo

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/lonly/example/ndkdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: myNdk.cpp  native-lib.cpp
app/src/main/java/com/lonly/example/ndkdemo/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/lonly/example/ndkdemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
